fix lateral menu z-index

--- a/novaideo/static/less/novaideo.less
+++ b/novaideo/static/less/novaideo.less
@@ -1537,7 +1537,11 @@ a.ajax-action{
     position: fixed;
     bottom: 25px;
     right: 20px;
-    z-index: 1046
+    z-index: 1047
+}
+
+.modal-backdrop.modal-sub-menu{
+  z-index: 1046
 }
 
 .lateral-menu-item {
